<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jeffdisher.october</groupId>
	<artifactId>october-project</artifactId>
	<packaging>pom</packaging>
	<version>1.0-pre2</version>
	<name>OctoberProject</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>16</maven.compiler.source>
		<maven.compiler.target>16</maven.compiler.target>
		<main.basedir>${project.basedir}</main.basedir>
	</properties>

	<modules>
		<module>october-common</module>
		<module>october-client</module>
		<module>october-server</module>
		<module>october-testresources</module>
		<module>october-integration</module>
	</modules>
</project>
